# enelyzer-ingestion-emp-mail

./: Cargo.toml  README.md
examples/: parse_email.rs
schema/: emp_mail.schema.json
src/: error.rs  lib.rs  parser.rs  types.rs
test_data/: energycockpit_example.eml  energycockpit_example_json_result.json
tests/: integration_test.rs
