[package]
name = "enelyzer-ingestion-emp-mail"
version = "0.1.0"
edition = "2021"
description = "Parser for Energy Market Price (EMP) cockpit emails into structured JSON"
license = "MIT"
repository = "https://github.com/michallis/enelyzer-ingestion-emp-mail"
keywords = ["energy", "email", "parser", "market-data", "electricity"]
categories = ["parsing", "email"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = { version = "0.8", features = ["derive"] }
scraper = "0.22"
mailparse = "0.15"
thiserror = "2"
regex = "1"
once_cell = "1"

[dev-dependencies]
